# gerbil-scheme-language-project-harness

./: .gitignore  AGENTS.md  BUILD.bazel  README.md  REPO.bazel  build-native.ss  build-static.ss  build.ss  devenv.nix  gerbil.pkg  manifest.ss
build-support/: gsc-wrapper-runtime.ss  gslph-build.ss  gslph-install-static-modules.ss  gslph-package-build.ss  gslph-package-spec.ss  gslph-worker-count.ss  native-wrapper-runtime.ss  owner-items-native.c  provider-build.ss  provider-cli-runner.ss  provider-cli-runtime.ss  provider-cli.ss  static-guide-generator.ss
components/: BUILD.bazel  poo-flow.bzl  poo-flow.json
docs/: gerbil-source-notes.md
policy/: modularity.ss
provider/: asp-provider-manifest.json  asp-provider-workspace-install.json  workspace-build.ss
schemas/: semantic-agent-hook-provider-manifest.v1.schema.json  semantic-exact-selector-receipt.v1.schema.json  semantic-extension-pattern-mapping.v1.schema.json  semantic-gerbil-scheme-harness-info.v1.schema.json  semantic-graph-turbo-request.v1.schema.json  semantic-language-evidence.v1.schema.json  semantic-language-registry.v1.schema.json  semantic-native-syntax-fact-index.v1.schema.json  semantic-query-packet.v1.schema.json  semantic-runtime-source-acquisition.v1.schema.json  semantic-search-packet.v1.schema.json  semantic-type-proof.v1.schema.json
src/: build.ss  checker.ss  cli-dev-linker.ss  cli-install-linker.ss  cli-launcher.ss  cli-query.ss  cli-release-linker.ss  cli.ss  constants.ss  gerbil.pkg  parser.ss  policy.ss  search-light-launcher.ss  types.ss
t/: agent-poo-scenario-contract-test.ss  (+68 more)
(+995 files in other folders)
