load("//components:poo-flow.bzl", "POO_FLOW_COMPONENT_SOURCES")

package(default_visibility = ["//visibility:public"])

exports_files([
    "build.ss",
    "gerbil.pkg",
])

filegroup(
    name = "sources",
    srcs = glob(
        ["**/*.ss"],
        exclude = [
            ".bin/**",
            ".gerbil/**",
            "bazel-*/**",
        ],
    ) + ["gerbil.pkg"],
)

filegroup(
    name = "poo_flow_component_sources",
    srcs = POO_FLOW_COMPONENT_SOURCES + ["gerbil.pkg"],
)
